# TCPServer_QTApplication

./: CMakeLists.txt  CMakeLists.txt.user.f6c6f74  tcpserver.cpp  tcpserver.h  tcpserver.ui
